added splash screen and ViewPager back navigation with back button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="detils_fragment">detils fragment</string>
     <string name="list_fragment">list fragment</string>
     <string name="settings_fragment">settings fragment</string>
+    <string name="mastering_android_app">Mastering Android App</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
